Terminado el contenido del portfolio

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
   <main>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Offcanvas navbar large">
       <div class="container-fluid">
-        <a class="navbar-brand" href="files/Currículum Jesús Morilla Martínez.pdf">Mi portfolio</a>
+        <a class="navbar-brand" href="files/Currículum Jesús Morilla Martínez.pdf">Mi Portafolio</a>
       </div>
     </nav>
   
     <div class="container my-5">
       <div class="bg-body-tertiary p-5 rounded">
         <div class="col-sm-8 py-5 mx-auto">
-          <h1 class="display-5 fw-normal">Navbar with offcanvas examples</h1>
-          <p class="fs-5">This example shows how responsive offcanvas menus work within the navbar. For positioning of navbars, checkout the <a href="/docs/5.3/examples/navbar-static/">top</a> and <a href="/docs/5.3/examples/navbar-fixed/">fixed top</a> examples.</p>
-          <p>From the top down, you'll see a dark navbar, light navbar and a responsive navbar—each with offcanvases built in. Resize your browser window to the large breakpoint to see the toggle for the offcanvas.</p>
+          <h1 class="display-5 fw-normal">Hola, soy Jesús Morilla</h1>
+          <p class="fs-5">Desarrollador Web y Diseñador</p>
+          <p>Me encanta la informática y estoy estudiando desarrollo web, por eso uso Wordpress, también bootstrap y además se hacer páginas web desde 0 con html, css y javascript</p>
           <p>
-            <a class="btn btn-primary" href="/docs/5.3/components/navbar/#offcanvas" role="button">Learn more about offcanvas navbars »</a>
+            <a class="btn btn-primary" href="https://github.com/JesMM9" role="button">Ver mis proyectos »</a>
           </p>
       </div>
       </div>
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/Screenshot from 2025-02-25 12-52-56.png" class="card-img-top" alt="Imágen página web agoodshop">
+                    <img src="img/Imágen página web agoodshop.png" class="card-img-top" alt="Imágen página web agoodshop">
                     <div class="card-body">
                         <h5 class="card-title">Mi primera página web "agoodshop"</h5>
                         <p class="card-text">Mi primera página web creada solo con html y un poco de css de una tienda online</p>
@@ -41,7 +41,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/Screenshot from 2025-02-25 12-56-04.png" class="card-img-top" alt="Proyecto 2">
+                    <img src="img/Imágen repositorio de Base de Datos.png" class="card-img-top" alt="Imágen de repositorio de github de Base de Datos">
                     <div class="card-body">
                         <h5 class="card-title">Ejercicios de Base de Datos realizados en Oracle</h5>
                         <p class="card-text">Boletín de ejercicios de Base de Datos para practicar consultas en Oracle</p>
@@ -50,7 +50,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/Screenshot from 2025-02-25 13-00-20.png" class="card-img-top" alt="Proyecto 3">
+                    <img src="img/Imágen página web Gourmet Crusaider.png" class="card-img-top" alt="Imágen página web Gourmet Crusaider">
                     <div class="card-body">
                         <h5 class="card-title">Página web sobre reseñas de restaurantes</h5>
                         <p class="card-text">Página web titulada "Gourmet Crusaider" con diversas páginas como login o registros</p>
@@ -60,32 +60,27 @@
         </div>
     </section>
     <div class="px-4 pt-5 my-5 text-center border-bottom">
-        <h1 class="display-4 fw-bold text-body-emphasis">Centered screenshot</h1>
+        <h1 class="display-4 fw-bold text-body-emphasis">Proyectos java en Eclipse IDE</h1>
         <div class="col-lg-6 mx-auto">
-          <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-            <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Primary button</button>
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
-          </div>
+          <p class="lead mb-4">También hago proyectos en java funcionales, orientado a objetos y testing con JUnit en Eclipse IDE</p>
         </div>
         <div class="overflow-hidden" style="max-height: 30vh;">
           <div class="container px-5">
-            <img src="bootstrap-docs.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+            <img src="img/Imágen trabajando java en eclipse.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Imágen de proyectos java en Eclipse IDE" width="700" height="500" loading="lazy">
           </div>
         </div>
       </div>
       <div class="container my-5">
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
           <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-            <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Border hero with cropped image and shadows</h1>
-            <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+            <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Páginas web hechas en Wordpress</h1>
+            <p class="lead">He empezado a usar Wordpress para hacer páginas web y tener un amplio abanico de herramientas para el desarrollo de páginas web</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-              <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Primary</button>
-              <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+                <a class="btn btn-primary" href="https://wordpress.com/view/jesusmorilla.wordpress.com" role="button">Ver mi perfil de Wordpress »</a>
             </div>
           </div>
           <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-              <img class="rounded-lg-3" src="bootstrap-docs.png" alt="" width="720">
+              <img class="rounded-lg-3" src="img/Imágen página web con Wordpress.jpg" alt="Imágen página web con Wordpress" width="720">
           </div>
         </div>
       </div>
